--- a/CP HTML CSS/copy.html
+++ b/CP HTML CSS/copy.html
@@ -29,9 +29,9 @@
             <div class="center-section">
                 <ul>
                     <li><a href="#">HUB</a></li>
-                    <li><a href="#">ART GALLERY</a></li>
-                    <li><a href="#">DIGITAL GARDEN</a></li>
-                    <li><a href="#">ALTARS</a></li>
+                    <li><a href="#">MUSINGS</a></li>
+                    <li><a href="#">MEDIA</a></li>
+                    <li><a href="#">SHRINES</a></li>
                 </ul>
             </div>
 
