--- a/Mary Ann Peters/peters.html
+++ b/Mary Ann Peters/peters.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="peters.css">
-    <title>Document</title>
+    <title>Musing's & Media: Blog</title>
 </head>
 
 <script type="module">
