--- a/Mary Ann Peters/peters.html
+++ b/Mary Ann Peters/peters.html
@@ -64,14 +64,14 @@
                 <ul>
                     <li><a href="#">HUB</a></li>
                     <li><a href="#">MUSINGS</a></li>
-                    <li><a href="#">MEDIA</a></li>
-                    <li><a href="#">SHRINES</a></li>
+                    <li><a href="https://http.cat/404">MEDIA</a></li>
+                    <li><a href="https://http.cat/404">SHRINES</a></li>
                 </ul>
             </div>
 
             <div class="right-section">
                 <div class="guestbook">
-                    <a href="https://pub42.bravenet.com/guestbook/3567767585/" target="_blank"><img src="Copy Images/guestbook.gif" alt="Come sign my guestbook!"></a>
+                    <a href="https://trialn1error.atabook.org/" target="_blank"><img src="Copy Images/guestbook.gif" alt="Come sign my guestbook!"></a>
                 </div>
             </div>
         </nav>
