--- a/Mary Ann Peters/peters.html
+++ b/Mary Ann Peters/peters.html
@@ -62,8 +62,8 @@
             </a>
             <div class="center-section">
                 <ul>
-                    <li><a href="#">HUB</a></li>
-                    <li><a href="#">MUSINGS</a></li>
+                    <li><a href="https://trialn1error.neocities.org/#">HUB</a></li>
+                    <li><a href="https://trialn1error.neocities.org/Art%20Gallery/gallery">MUSINGS</a></li>
                     <li><a href="https://http.cat/404">MEDIA</a></li>
                     <li><a href="https://http.cat/404">SHRINES</a></li>
                 </ul>
